# Neural-MRI

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  NEURAL_MRI_SPEC.md  README.md  docker-compose.yml  neural-mri.jsx
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/neural_mri/: __init__.py  config.py  i18n.py  main.py
backend/neural_mri/api/: routes_battery.py  routes_collab.py  routes_model.py  routes_perturb.py  routes_report.py  routes_sae.py  routes_scan.py  routes_search.py  routes_settings.py  ws_collab.py  ws_stream.py
backend/neural_mri/core/: analysis_engine.py  battery_engine.py  model_manager.py  model_registry.py  model_search.py  perturbation_engine.py  report_engine.py  sae_manager.py  sae_registry.py  scan_cache.py  session_manager.py  test_registry.py
backend/neural_mri/schemas/: battery.py  causal_trace.py  collab.py  model.py  perturb.py  report.py  scan.py
backend/neural_mri/utils/: serialization.py  tensor_summary.py
backend/tests/: conftest.py  test_analysis_engine.py  test_api_battery.py  test_api_collab.py  test_api_model.py  test_api_sae.py  test_api_scan.py  test_battery_engine.py  test_causal_trace.py  test_i18n.py  test_model_manager.py  test_model_registry.py  test_report_engine.py  test_sae_manager.py  test_sae_registry.py  test_scan_cache.py  test_session_manager.py  test_test_registry.py
docs/: neural-mri-next-phase.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  collabSocket.ts  ws.ts
(+67 files in other folders)
